--- a/tuto_debut.html
+++ b/tuto_debut.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>My Bakery, TUTORIEL</title>
+    <link rel="stylesheet" href="chargement_elements.css">
+
 </head>
 <style>
     #presentoire:hover{
@@ -15,6 +17,16 @@
 	padding: 0;
 	height: 100%;
 	width: 100%;">
+<p style="position: absolute; top: 0;">
+    Tourne l'écran dans l'autre sens
+</p>
+<div class="preload">
+    <img src="image/chat.png" alt="avion" class="avion">
+    <h3>Chargement de My Bakery...</h3>
+</div>
+<section>
+    <script src="charger.js"></script>
+
 
 
 
@@ -131,7 +143,7 @@ function remplir_bulle() {
 </script>
 
 
-</script>
+</script></section>
 </body>
 
 </html>
