--- a/tuto_ext.html
+++ b/tuto_ext.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My Bakery, TUTORIEL</title>
+    <link rel="stylesheet" href="chargement_elements.css">
 
 </head>
 <style>
@@ -15,6 +16,15 @@
 	height: 100%;
 	width: 100%;
 background-color: #2980B9">
+<p style="position: absolute; top: 0;">
+    Tourne l'écran dans l'autre sens
+</p>
+<div class="preload">
+    <img src="image/chat.png" alt="avion" class="avion">
+    <h3>Chargement de My Bakery...</h3>
+</div>
+<section>
+    <script src="charger.js"></script>
 
 
 <img src="image/paysage_exterieur.png" style=" position: absolute; left: 20%;top: 0em;height: 100%">
@@ -47,7 +57,7 @@ top:5px">Nous sommes à l'extérieur de la boulangerie, il y a un magasin à cô
 </div>
 
 <img src="image/chat.png" style="top: 60%; left: 50%; position:absolute;">
-
+</section>
 </body>
 
 
