--- a/tuto_stock.html
+++ b/tuto_stock.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>My Bakery, TUTORIEL</title>
+    <link rel="stylesheet" href="chargement_elements.css">
 
 
 </head>
 <body style="    background-image: url('./image/fond_boulangerie.png') ; background-size: cover;
 ">
 
-
+<p style="position: absolute; top: 0;">
+    Tourne l'écran dans l'autre sens
+</p>
+<div class="preload">
+    <img src="image/chat.png" alt="avion" class="avion">
+    <h3>Chargement de My Bakery...</h3>
+</div>
+<section>
+    <script src="charger.js"></script>
 
 <img id="retour" src="image/fleche.svg" style="display:none;position: absolute; bottom: 0; left: 0;width: 7em; transform: rotate(-90deg)" title="RETOUR" onclick="location='caisse.html'">
 <div id="zone2" style="position: absolute;  width: 900px; "> </div>
@@ -59,90 +68,92 @@ position:relative;
 top:5px"></span>
 
 </div>
-</body>
 
-<script>
-    function remplir_bulle(){
-        document.getElementById("bulle").style.display = "block"
-        document.getElementById("output").innerHTML = "Nous voici dans les stocks de la boulangerie"
-
-        document.getElementById("fleche").addEventListener("click", function(){
-            document.getElementById("output").innerHTML = ""
-            document.getElementById("output").innerHTML = "Les produits grisés seront débloqués en prenant du niveau. Pour cela, il faut répondre correctement aux attentes des clients!"
+    <script>
+        function remplir_bulle(){
+            document.getElementById("bulle").style.display = "block"
+            document.getElementById("output").innerHTML = "Nous voici dans les stocks de la boulangerie"
 
             document.getElementById("fleche").addEventListener("click", function(){
-                document.getElementById("retour").style.display = "block"
-                document.getElementById("fleche").style.opacity = 0
                 document.getElementById("output").innerHTML = ""
-                document.getElementById("output").innerHTML = "La flèche en bas à gauche te permet de revenir à la caisse. Clique dessus!"
-                document.getElementById("retour").addEventListener("click", function(){
-                    location = "tuto_debut2.html"
+                document.getElementById("output").innerHTML = "Les produits grisés seront débloqués en prenant du niveau. Pour cela, il faut répondre correctement aux attentes des clients!"
+
+                document.getElementById("fleche").addEventListener("click", function(){
+                    document.getElementById("retour").style.display = "block"
+                    document.getElementById("fleche").style.opacity = 0
+                    document.getElementById("output").innerHTML = ""
+                    document.getElementById("output").innerHTML = "La flèche en bas à gauche te permet de revenir à la caisse. Clique dessus!"
+                    document.getElementById("retour").addEventListener("click", function(){
+                        location = "tuto_debut2.html"
+                    },false)
                 },false)
             },false)
-        },false)
         }
 
-    //infobulle et image grisée
-    console.log(document.getElementsByTagName("input").length);
-    for (i=0; i<document.getElementsByTagName("input").length; i++){
-        var elmts_classes = document.getElementsByClassName(i);
-        console.log(elmts_classes)
+        //infobulle et image grisée
+        console.log(document.getElementsByTagName("input").length);
+        for (i=0; i<document.getElementsByTagName("input").length; i++){
+            var elmts_classes = document.getElementsByClassName(i);
+            console.log(elmts_classes)
 
-        for (j = 0; j < elmts_classes.length ; j++){
-            //console.log(document.getElementsByClassName(i)[j])
-            //console.log(document.getElementsByClassName(i)[j].className)
-            console.log(i+"."+j+" : " + document.getElementsByClassName(i)[j].alt)
-            var nom = document.getElementsByClassName(i)[j].alt
+            for (j = 0; j < elmts_classes.length ; j++){
+                //console.log(document.getElementsByClassName(i)[j])
+                //console.log(document.getElementsByClassName(i)[j].className)
+                console.log(i+"."+j+" : " + document.getElementsByClassName(i)[j].alt)
+                var nom = document.getElementsByClassName(i)[j].alt
 
-            if (i > 0) {
+                if (i > 0) {
 
-                document.getElementsByClassName(i)[j].style.filter = "grayscale(100%)";
-                document.getElementsByClassName(i)[j].style.webkitFilter = "grayscale(100%)";
-                document.getElementsByClassName(i)[j].title = nom + " : disponible dès le niveau " + i;
+                    document.getElementsByClassName(i)[j].style.filter = "grayscale(100%)";
+                    document.getElementsByClassName(i)[j].style.webkitFilter = "grayscale(100%)";
+                    document.getElementsByClassName(i)[j].title = nom + " : disponible dès le niveau " + i;
 
-            } else {
-                document.getElementsByClassName(i)[j].title = nom;
+                } else {
+                    document.getElementsByClassName(i)[j].title = nom;
+                }
             }
         }
-    }
 
 
-    function deplace () {
-        for (var i = 0; i < nbFormules; i++) {
-            if (formules[i]["left"] > largeurG) {
+        function deplace () {
+            for (var i = 0; i < nbFormules; i++) {
+                if (formules[i]["left"] > largeurG) {
 
-                document.getElementById("fleche").style.display = "block";
-                break
-            } else {
-                formules[i]["left"] += 1;
-                document.getElementById('g' + i).style.top = formules[i]["top"] + 'px';
-                document.getElementById('g' + i).style.left = formules[i]["left"] + 'px';           }        }    }
-    function deplaceSur (id) {
-        //spécifier le nombre d'objets ici
-        nbFormules = 1;
-        //la dimension de l'objet
-        objectWidth = 123;
-        objectHeight = 30;
-        //dimension de la zone
-        largeurG = parseInt(document.getElementById(id).style.width.substr(0, document.getElementById(id).style.width.length-2));
-        hauteurG = parseInt(document.getElementById(id).style.height.substr(0, document.getElementById(id).style.height.length-2));
-        largeurG -= objectWidth;
-        hauteurG -= objectHeight;
-        formules = new Array();
-        for (var i=0; i < nbFormules; i++) {
-            formules[i] = new Array();
-            formules[i]["left"] = 200;
-            formules[i]["top"] = 400;
+                    document.getElementById("fleche").style.display = "block";
+                    break
+                } else {
+                    formules[i]["left"] += 1;
+                    document.getElementById('g' + i).style.top = formules[i]["top"] + 'px';
+                    document.getElementById('g' + i).style.left = formules[i]["left"] + 'px';           }        }    }
+        function deplaceSur (id) {
+            //spécifier le nombre d'objets ici
+            nbFormules = 1;
+            //la dimension de l'objet
+            objectWidth = 123;
+            objectHeight = 30;
+            //dimension de la zone
+            largeurG = parseInt(document.getElementById(id).style.width.substr(0, document.getElementById(id).style.width.length-2));
+            hauteurG = parseInt(document.getElementById(id).style.height.substr(0, document.getElementById(id).style.height.length-2));
+            largeurG -= objectWidth;
+            hauteurG -= objectHeight;
+            formules = new Array();
+            for (var i=0; i < nbFormules; i++) {
+                formules[i] = new Array();
+                formules[i]["left"] = 200;
+                formules[i]["top"] = 400;
 
-            document.write ('<span id="g'+i+'" style="position: absolute; left: '+formules[i]["left"]+'px; top: '+formules[i]["top"]+'px">');
-            // placer ici l'objet qui tombe !
-            document.write ('<img src="image/chat.png">');
-            document.write ('</span>');
+                document.write ('<span id="g'+i+'" style="position: absolute; left: '+formules[i]["left"]+'px; top: '+formules[i]["top"]+'px">');
+                // placer ici l'objet qui tombe !
+                document.write ('<img src="image/chat.png">');
+                document.write ('</span>');
+            }
+            intervalG = window.setInterval ("deplace()", 5);
         }
-        intervalG = window.setInterval ("deplace()", 5);
-    }
 
-    deplaceSur("zone2")
-</script>
+        deplaceSur("zone2")
+    </script>
+
+</section>
+</body>
 
 </html>
