--- a/debut_jeu.html
+++ b/debut_jeu.html
@@ -12,7 +12,7 @@
 
 </head>
 <body style="color: #333333">
-<p style="padding-top: 50%;position: absolute; top: 0; width:100%;height: 100%;">
+<p style="position: absolute; top: 0;">
     Tourne l'écran dans l'autre sens
 </p>
 <div class="preload">
