--- a/demandeEnregistrement_creer.html
+++ b/demandeEnregistrement_creer.html
@@ -39,7 +39,7 @@
 
 </style>
 <body>
-<p style="padding-top: 50%;position: absolute; top: 0; width:100%;height: 100%;">
+<p style="position: absolute; top: 0;">
     Tourne l'écran dans l'autre sens
 </p>
 <div class="preload">
