--- a/demande_paiement.html
+++ b/demande_paiement.html
@@ -25,7 +25,7 @@
 </style>
 <body>
 
-<p style="padding-top: 50%;position: absolute; top: 0; width:100%;height: 100%;">
+<p style="position: absolute; top: 0;">
     Tourne l'écran dans l'autre sens
 </p>
 
@@ -44,7 +44,7 @@
 </div>
 <div id="deco">
     <img id="vase_fleurs" src="image/magasin/vase_fleurs.png" style="position:absolute;width: 11%; left: 18%; bottom: 35%">
-    <img id="porte" src="image/magasin/porte_delabree.png" style="position:absolute;width: 11%; left: 30%; bottom: 36%">
+    <img id="porte" src="image/magasin/porte_delabree.png" style="position:absolute;width: 12%; height: 40%; left: 30%; bottom: 42%">
     <img id="fenetre" src="image/magasin/fenetre_delabree.png" style="position:absolute;width: 12%; right: 42%; top: 24%">
     <img id="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute;width: 7%; right: 15%; top: 20%">
     <img id="cloche" src="image/magasin/cloche.png" style="display:none;width: 3%; position: absolute; top: 20%; left: 35%;transform: scaleX(-1); transform: rotate(30deg)">
