--- a/demande_tuto_ou_non.html
+++ b/demande_tuto_ou_non.html
@@ -13,8 +13,7 @@
 
 
 <body style="text-align: center;background-image: url('image/fond_boulangerie.png'); background-repeat: no-repeat; background-size: cover ">
-
-<p style="padding-top: 50%;position: absolute; top: 0; width:100%;height: 100%;">
+<p style="position: absolute; top: 0;">
     Tourne l'écran dans l'autre sens
 </p>
 
