--- a/init2.html
+++ b/init2.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-<p style="padding-top: 50%;position: absolute; top: 0; width:100%;height: 100%;">
+<p style="position: absolute; top: 0;">
     Tourne l'écran dans l'autre sens
 </p>
 
