--- a/magasin.html
+++ b/magasin.html
@@ -27,7 +27,7 @@ margin: 0;
     <h3 style="position:absolute;">Chargement de My Bakery...</h3>
 
 </div>
-<p style="padding-top: 50%;position: absolute; top: 0; width:100%;height: 100%;">
+<p style="position: absolute; top: 0;">
     Tourne l'écran dans l'autre sens
 </p>
 
