--- a/test.html
+++ b/test.html
@@ -1,62 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="">
 <head>
-    <meta charset="UTF-8">
-    <title>test</title>
-</head>
+    <title>My Bakey _ caisse</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="chargement_elements.css">
+    <link rel="stylesheet" href="menu.css">
+<body
+        onload="document.getElementById('resultat').focus()"
+        style="background-image: url('image/fond/fondfinal.png'); background-size: cover; background-repeat: no-repeat">
 
-<style media="screen">
-    input, button{
-        padding: 7px;
-        height: 40px;
-    }
-</style>
-<body>
-<h2 id="title">Local Storage</h2>
-<fieldset>
-    <legend>
-        Insert Data
-    </legend>
-    <input id="inpkey" type="text" placeholder="Enter key">
-    <input id="inpvalue" type="text" placeholder="Enter value">
-   <button type="button" id="btn">insert data</button>
-</fieldset>
 
-<fieldset>
-    <legend>Local Storage</legend>
-<div id="output"></div>
-    </fieldset>
+<div class="preload">
+    <img src="image/chat.png" alt="avion" class="avion" style="position:absolute;">
+    <h3 style="position:absolute;">Chargement de My Bakery...</h3>
+
+</div>
+<p style="padding-top: 50%;position: absolute; top: 0; width:100%;height: 100%;">
+    Tourne l'écran dans l'autre sens
+</p>
+<section>
+    <script src="charger.js"></script>
+</section>
+
 
 </body>
 
-<script type="text/javascript">
-    console.log(localStorage);
-    localStorage.setItem("name" , "dodo");
-    const inpkey = document.getElementById("inpkey");
-    const inpvalue = document.getElementById("inpvalue");
-    const btn = document.getElementById("btn");
-    const output = document.getElementById("output");
-
-    btn.onclick = function () {
-const key = inpkey.value;
-const value = inpvalue.value;
-console.log(key);
-console.log(value);
-
-if (key && value){
-    localStorage.setItem(key, value);
-    location.reload();
-
-}
-
-    };
-
-    for (let i = 0 ; i < localStorage.length ; i++){
-        const key = localStorage.key(i);
-        const value = localStorage.getItem(key);
-        output.innerHTML += `${key}: ${value} <br />`;
-    }
-
-</script>
 
 </html>
