--- a/tuto_caisse_fin.html
+++ b/tuto_caisse_fin.html
@@ -4,6 +4,8 @@
     <title>My Bakery, FIN DU TUTORIEL</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="menu.css" />
+    <link rel="stylesheet" href="chargement_elements.css">
+
 
 
 
@@ -13,7 +15,17 @@
 	padding: 0;
 	height: 100%;
 	width: 100%;">
-<img src="image/fondfinal.png" style=" position: absolute; width: 100%;height: 100%">
+<p style="position: absolute; top: 0;">
+    Tourne l'écran dans l'autre sens
+</p>
+<div class="preload">
+    <img src="image/chat.png" alt="avion" class="avion">
+    <h3>Chargement de My Bakery...</h3>
+</div>
+<section>
+    <script src="charger.js"></script>
+
+    <img src="image/fondfinal.png" style=" position: absolute; width: 100%;height: 100%">
 <div class="dropdown" style="float: left; position: absolute">
     <button onclick="location='index.html'" class="dropbtn" style="background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 1.5em; border-radius: 1em; color: #555555" >MENU</button>
     <div id="myDropdown" class="dropdown-content">
@@ -172,7 +184,7 @@ position: absolute; width: 12%; left: 10%; top: 72%;">
 </script>
 
 
-
+</section>
 
 </body>
 
