--- a/tuto_debut3.html
+++ b/tuto_debut3.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>My Bakery, TUTORIEL</title>
+    <link rel="stylesheet" href="chargement_elements.css">
+
 </head>
 <style>
     #presentoire:hover{
@@ -20,6 +22,16 @@
 	padding: 0;
 	height: 100%;
 	width: 100%;">
+<p style="position: absolute; top: 0;">
+    Tourne l'écran dans l'autre sens
+</p>
+<div class="preload">
+    <img src="image/chat.png" alt="avion" class="avion">
+    <h3>Chargement de My Bakery...</h3>
+</div>
+<section>
+    <script src="charger.js"></script>
+
 <img src="image/fondfinal.png" style=" position: absolute; width: 100%;height: 100%">
 <img id="fleche_pointeur" title="" src="image/fleche_pointeur.svg" style="transform: scaleY(-1); width: 20%; position:absolute; right: 30%; top: 15%; display: none; z-index: 1">
 
@@ -260,7 +272,7 @@ top:5px"></span>
     deplaceSur("zone2")
 
 
-</script>
+</script></section>
 </body>
 
 </html>
