--- a/tuto_stock.html
+++ b/tuto_stock.html
@@ -26,20 +26,20 @@
 <div id="produits" style="float: left; margin-top: 10%">
     <table style="position:relative; background-color: brown; border:solid; border-color: brown; left: 15em">
         <tr style="background-color:chocolate" >
-            <td><input class="0" alt="pain"  type="image" src="image/pain.png" style="width: 10em; ">
-            <td><input class="0" alt="croissant" type="image" src="image/croissant.jpg" style="width: 10em">
-            <td><input class="0" alt="pain au chocolat" type="image" src="image/pain_au_chocolat.png" style="width: 10em">
-            <td><input class="0" alt="brioche" type="image" src="image/brioche.png" style="width: 10em">
+            <td><input class="0" alt="pain"  type="image" src="image/stock/pain.png" style="width: 10em; ">
+            <td><input class="0" alt="croissant" type="image" src="image/stock/croissant.png" style="width: 10em">
+            <td><input class="0" alt="pain au chocolat" type="image" src="image/stock/pain_au_chocolat.png" style="width: 10em">
+            <td><input class="0" alt="brioche" type="image" src="image/stock/brioche.png" style="width: 10em">
         </tr>
         <tr style="background-color:chocolate" >
-            <td><input class="0" alt="chouquette"  type="image" src="image/chouquette.jpg" style="width: 10em; ">
-            <td><input class="2" alt="cookie" type="image" src="image/cookie.png" style="width: 10em">
-            <td><input class="4" alt="meringue" type="image" src="image/meringue.png" style="width: 10em">
-            <td><input class="6" alt="gateau au chocolat" type="image" src="image/gateau_au_chocolat.webp" style="width: 10em">
+            <td><input class="0" alt="chouquette"  type="image" src="image/stock/chouquette.png" style="width: 10em; ">
+            <td><input class="2" alt="cookie" type="image" src="image/stock/cookie.png" style="width: 10em">
+            <td><input class="4" alt="meringue" type="image" src="image/stock/meringue.png" style="width: 10em">
+            <td><input class="6" alt="gateau au chocolat" type="image" src="image/stock/gateau_au_chocolat.png" style="width: 10em">
         </tr>
         <tr style="background-color:chocolate" >
-            <td><input class="8" alt="charlotte aux fraises"  type="image" src="image/charlotte.jpg" style="width: 10em; ">
-            <td><input class="9" alt="tarte au citron" type="image" src="image/tarte_citron.png" style="width: 10em">
+            <td><input class="8" alt="charlotte aux fraises"  type="image" src="image/stock/charlotte.png" style="width: 10em; ">
+            <td><input class="9" alt="tarte au citron" type="image" src="image/stock/tarte_citron.png" style="width: 10em">
         </tr>
     </table>
     <img id="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ; width: 30em;bottom: 1.5em; right: 0em">
