correction extension img

--- a/caisse.html
+++ b/caisse.html
@@ -708,13 +708,13 @@ color: blueviolet;
 
         switch (parseInt(tentatives)) {
             case 0:
-                te.src = "./image/t1.svg"
+                te.src = "./image/t1.png"
                 break;
             case 1:
-                te.src = "./image/t2.svg"
+                te.src = "./image/t2.png"
                 break;
             case 2:
-                te.src = "./image/t3.svg"
+                te.src = "./image/t3.png"
                 break;
         }
 
