focus sur entrée prénom

--- a/creerPartie.html
+++ b/creerPartie.html
@@ -39,6 +39,8 @@
 </form>
 
     <script type="text/javascript">
+        document.getElementById('inpvalue').focus()
+
         const inpvalue = document.getElementById("inpvalue");
         const btn = document.getElementById("btn");
         const output = document.getElementById("output");
